[package]
name = "workers-rs-axum-tursodb"
version = "0.1.0"
edition = "2021"
authors = [ "Alexandre Faria <alexandre.faria@auroka.pt>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum  = { version = "0.7", default-features = false, features = ["json"]}
console_error_panic_hook = { version = "0.1.1" }
libsql-client = { version = "0.34", default-features = false, features = ["workers_backend"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-service = "0.3.2"
worker = { version="0.2.0", features=['http', 'axum'] }
worker-macros = { version="0.2.0", features=['http'] }

[patch.crates-io]
libsql-client = { git = "https://github.com/spigaz/libsql-client-rs" }
